fix wallet selection on smaller than 320px screens

--- a/src/components/MainLayout/MainLayout.module.css
+++ b/src/components/MainLayout/MainLayout.module.css
@@ -10,11 +10,9 @@
 }
 
 .iconWallet {
-  font-size: 24px;
   color: rgba(0, 0, 0, 0.45);
   cursor: pointer;
-  padding: 10px;
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 @media (max-width: 1200px) {
